Retry manager startup from dashboard